deployment.tpl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${KUBE_META_NAME}
  namespace: seamlesshr-hrms-uat
spec:
  selector:
    matchLabels:
      app: ${KUBE_META_NAME}
  replicas: 1
  template:
    metadata:
      labels:
        app: ${KUBE_META_NAME}
    spec:
        containers:
        - name: ${KUBE_META_NAME}
          image: seamlesshr/${KUBE_META_NAME}:HRMS-${BITBUCKET_BUILD_NUMBER}
          livenessProbe:
            httpGet:
              path: /
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 15
            timeoutSeconds: 30
            periodSeconds: 15
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 443
          #     scheme: HTTPS
          #   initialDelaySeconds: 15
          #   timeoutSeconds: 30
          #   periodSeconds: 15
          volumeMounts:
          - name:  ${KUBE_META_NAME}-storage
            mountPath:  /var/www/mnt
          resources: 
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 1000m
              memory: 2Gi
          ports:
          - containerPort: 80
          imagePullPolicy: Always
        imagePullSecrets:
          - name:  regcred
        volumes:
          - name:  ${KUBE_META_NAME}-storage
            persistentVolumeClaim:
              claimName: ${KUBE_META_NAME}-claim
        nodeSelector:    
          eks.amazonaws.com/capacityType: SPOT
---
apiVersion: v1
kind: Service
metadata:
  name: ${KUBE_META_NAME}
  namespace: seamlesshr-hrms-uat
spec:
  selector:
    app: ${KUBE_META_NAME}
  ports:
    - name: http
      port: 80
---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/add-base-url: 'true'
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    certmanager.k8s.io/cluster-issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.allow-http: "false"
    kubernetes.io/ingress.allow-https: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: ${KUBE_META_NAME}
  name: ${KUBE_META_NAME}-ingress
  namespace: seamlesshr-hrms-uat
spec:
  rules:
  - host: ${KUBE_META_NAME}.${DEPLOYMENT_SUFFIX}
    http:
      paths:
      - backend:
          serviceName: ${KUBE_META_NAME}
          servicePort: 80
        path: /
  tls:
  - hosts:
    - ${KUBE_META_NAME}.${DEPLOYMENT_SUFFIX}
    secretName: tls-secret
